--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -25,8 +25,8 @@ jobs:
 
       - name: Install Poetry
         run: |
-          pip install --upgrade pip
-          pip install poetry==1.0
+          pip install --upgrade setuptools pip
+          pip install poetry
 
       - name: Test Grid Node
         run: |
